# saturnlab

./: .gitignore  CLAUDE.md  LICENSE  README.md  REVIEW_CHECKLIST.md  Untitled.ipynb  demo_memory.ipynb  eslint.config.js  package-lock.json  package.json  test-memory.ipynb  test-output-memory.ipynb  test-output-memory_clean.ipynb  test-outputs.ipynb  test-productivity.ipynb  test-save2.ipynb  test-settings.ipynb  test-step4.ipynb  test-step5.html  test-step5.ipynb  test-step5.py  test-step5_clean.ipynb  test-suspension-tab1.ipynb  test-suspension-tab2.ipynb  test_save.ipynb  vite.config.ts
.claude/skills/: skill-rules.json
.github/workflows/: ci.yml  release.yml
benchmarks/: measure.py
scripts/: record-comparison.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/filesystem/: mod.rs
src-tauri/src/kernel/: discovery.rs  manager.rs  message.rs  mod.rs  remote.rs  ws_client.rs  zmq_client.rs
src-tauri/src/memory/: monitor.rs
src-tauri/src/notebook/: format.rs  io.rs
src-tauri/src/session/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/terminal/: mod.rs
src/hooks/: useAutosave.ts  useSuspension.ts
src/lib/: ai.ts  dependencyAnalyzer.ts  ipc.ts  widgetManager.ts
src/store/: index.ts  tabStore.ts
src/test/: dark-theme.test.ts  dependency-analyzer.test.ts  memory.test.ts  menu-bar.test.tsx  notebook-format.test.ts  output-area.test.tsx  setup.ts  shortcuts-modal.test.tsx  status-bar.test.tsx  suspension.test.ts  tab-bar.test.tsx  (+2 more)
(+41 files in other folders)
