[package]
name = "saturn"
version = "0.1.0"
description = "Lightweight Jupyter notebook desktop app"
authors = ["nuswe"]
edition = "2021"

[lib]
name = "saturn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zeromq = "0.4"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"
walkdir = "2"
notify = "7"
dirs = "6"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "2"
anyhow = "1"
tauri-plugin-dialog = "2.6.0"
toml = "1.1.2"
portable-pty = "0.9.0"
